src/norx/oinput.nim


proc getBinding*(zName: cstring; u32BindingIndex: orxU32;
                         peType: ptr orxINPUT_TYPE; peID: ptr orxENUM;
                         peMode: ptr orxINPUT_MODE): orxSTATUS {.cdecl,
    importc: "orxInput_GetBinding", dynlib: libORX.}
  ## Gets an input binding (mouse/joystick button, keyboard key or joystick axis) at a given index
  ##  @param[in]   _zName            Concerned input name
  ##  @param[in]   _u32BindingIndex  Index of the desired binding, should be less than orxINPUT_KU32_BINDING_NUMBER
  ##  @param[out]  _peType           Binding type (if a slot is not bound, its value is orxINPUT_TYPE_NONE)
  ##  @param[out]  _peID             Binding ID (button/key/axis)
  ##  @param[out]  _peMode           Mode (only used for axis inputs)
  ##  @return orxSTATUS_SUCCESS if input exists, orxSTATUS_FAILURE otherwise

proc getBindingList*(zName: cstring; aeTypeList: array[
    orxINPUT_KU32_BINDING_NUMBER, orxINPUT_TYPE]; aeIDList: array[
    orxINPUT_KU32_BINDING_NUMBER, orxENUM]; aeModeList: array[
    orxINPUT_KU32_BINDING_NUMBER, orxINPUT_MODE]): orxSTATUS {.cdecl,
    importc: "orxInput_GetBindingList", dynlib: libORX.}
  ## Gets an input binding (mouse/joystick button, keyboard key or joystick axis) list
  ##  @param[in]   _zName          Concerned input name
  ##  @param[out]  _aeTypeList     List of binding types (if a slot is not bound, its value is orxINPUT_TYPE_NONE)
  ##  @param[out]  _aeIDList       List of binding IDs (button/key/axis)
  ##  @param[out]  _aeModeList     List of modes (only used for axis inputs)
  ##  @return orxSTATUS_SUCCESS if input exists, orxSTATUS_FAILURE otherwise

proc getBindingName*(eType: orxINPUT_TYPE; eID: orxENUM;
                             eMode: orxINPUT_MODE): cstring {.cdecl,
    importc: "orxInput_GetBindingName", dynlib: libORX.}
  ## Gets a binding name, don't keep the result as is as it'll get overridden during the next call to this function
  ##  @param[in]   _eType          Binding type (mouse/joystick button, keyboard key or joystick axis)
  ##  @param[in]   _eID            Binding ID (ID of button/key/axis to bind)
  ##  @param[in]   _eMode          Mode (only used for axis input)
  ##  @return orxSTRING (binding's name) if success, orxSTRING_EMPTY otherwise

proc getBindingType*(zName: cstring; peType: ptr orxINPUT_TYPE;
                             peID: ptr orxENUM; peMode: ptr orxINPUT_MODE): orxSTATUS {.
    cdecl, importc: "orxInput_GetBindingType", dynlib: libORX.}
  ## Gets a binding type and ID from its name
  ##  @param[in]   _zName          Concerned input name
  ##  @param[out]  _peType         Binding type (mouse/joystick button, keyboard key or joystick axis)
  ##  @param[out]  _peID           Binding ID (ID of button/key/axis to bind)
  ##  @param[out]  _peMode         Binding mode (only used for axis input)
  ##  @return orxSTATUS_SUCCESS if input is valid, orxSTATUS_FAILURE otherwise

proc getActiveBinding*(peType: ptr orxINPUT_TYPE; peID: ptr orxENUM;
                               pfValue: ptr orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxInput_GetActiveBinding", dynlib: libORX.}
  ## Gets active binding (current pressed key/button/...) so as to allow on-the-fly user rebinding
  ##  @param[out]  _peType         Active binding's type (mouse/joystick button, keyboard key or joystick axis)
  ##  @param[out]  _peID           Active binding's ID (ID of button/key/axis to bind)
  ##  @param[out]  _pfValue        Active binding's value (optional)
  ##  @return orxSTATUS_SUCCESS if one active binding is found, orxSTATUS_FAILURE otherwise
